# SBaGenX-Android

./: .gitignore  App.tsx  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  app.json  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  docs-and-demo.md  feature_request.md
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/assets/examples/X/: custom-mixbeat-windowed.sbg  custom-mixpulse-breathe.sbg  custom-mixspin-orbit.sbg  mixam-delta-river.sbg  noiseNN-brownian-demo.sbg  noisebeat-night-bed.sbg  noisepulse-theta-wash.sbg  sigmoid.sbgf  spinNN-brownian-orbit.sbg
android/app/src/main/assets/examples/basics/: curve-3unk-double-exp-solve-demo.sbgf  curve-amp-mix-demo.sbgf  curve-easeout-demo.sbgf  curve-expfit-solve-demo.sbgf  curve-mixfx-demo.sbgf  curve-piecewise-demo.sbgf  curve-raised-cosine-demo.sbgf  curve-sigmoid-like.sbgf  curve-smootherstep-demo.sbgf  prog-custom-envelope-binaural-demo.sbg  prog-custom-envelope-iso-demo.sbg  prog-wave-custom-envelope-demo.sbg
android/app/src/main/assets/examples/sbagenxlib/: minimal-keyframes.sbxseq  minimal-sbg-block.sbg  minimal-sbg-mixfx.sbg  minimal-sbg-multivoice.sbg  minimal-sbg-named.sbg  minimal-sbg-nested-block.sbg  minimal-sbg-timing.sbg  minimal-sbg-wave-custom.sbg  sbx_frontend_smoke.c  sbx_smoke.c
android/app/src/main/java/com/sbagenxandroid/: MainActivity.kt  MainApplication.kt
android/app/src/main/java/com/sbagenxandroid/sbagenx/: LocalDocumentStore.kt  MixInputResolver.kt  MixLooper.kt  NativeMixInputResolver.kt  PlaybackController.kt  SbaGenXBeatPreviewView.kt  SbaGenXBeatPreviewViewManager.kt  SbaGenXEditorView.kt  SbaGenXEditorViewManager.kt  SbaGenXModule.kt  SbaGenXPackage.kt  SbagenxBridge.kt  SbgRuntimeLoader.kt  StreamingMixInputResolver.kt
android/app/src/main/jni/: CMakeLists.txt
android/app/src/main/res/values/: strings.xml
docs/: COMMUNITY_STARTERS.md  android-codecs.md  android-native-bridge.md
ios/: Podfile
ios/SBaGenXAndroid/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/SBaGenXAndroid.xcodeproj/: project.pbxproj
ios/SBaGenXAndroid.xcodeproj/xcshareddata/xcschemes/: SBaGenXAndroid.xcscheme
native/jni/: CMakeLists.txt  sbagenx_bridge.cpp
native/sbagenxlib/: SNAPSHOT.md  flacdec.c  mp3dec.c  oggdec.c  sbagenxlib.c  sbagenxlib.h  sbagenxlib_curve_impl.h  sbagenxlib_dsp.h
native/sbagenxlib/libs/: UPSTREAM.md
src/native/: sbagenx.ts
src/ui/: SbaGenXBeatPreview.tsx  SbaGenXEditor.tsx  ValidationWorkbench.tsx  WebsiteBackdrop.tsx
